--- a/program.html
+++ b/program.html
@@ -58,7 +58,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="./index.html">HOME</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li>
+          <!-- <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <li><a href="./program.html">PROGRAM</a></li>
@@ -135,7 +135,7 @@
             <h1>Day 1</h1>
            <div>
             <div class="d-flex align-items-center mb-2 gap-3">
-              <span class="text-nowrap fw-bold">8AM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+              <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
             </div>
             <div class="d-flex align-items-start justify-content-start" >
               <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -145,7 +145,7 @@
                 <div class="h-100 mx-2" style="line-height: 1em;">
                   <p class="mt-2">
                     <span class="bg-secondary text-white px-2 py-1">Morning</span>
-                    <span class="bg-secondary text-white px-2 py-1">8AM - 9:45AM</span>
+                    <!-- <span class="bg-secondary text-white px-2 py-1"></span> -->
                   </p>
                   <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">8AM - 9AM</span> - Welcome and Registration of the Distinguished speaker Tawfiq </p>
                   <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">9AM - 9:45AM</span> - Opening Remarks and Introduction to CARISCA; Dale Rogers and Tawfiq</p>
@@ -163,7 +163,7 @@
 
            <div class="mt-4">
             <div class="d-flex align-items-center mb-2 gap-3">
-              <span class="text-nowrap fw-bold">10AM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+              <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
             </div>
             <div class="d-flex align-items-start justify-content-start" >
               <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -173,7 +173,7 @@
                 <div class="h-100 mx-2" style="line-height: 1em;">
                   <p class="mt-2">
                     <span class="bg-secondary text-white px-2 py-1">Late Morning</span>
-                    <span class="bg-secondary text-white px-2 py-1">10AM - 12:30PM</span>
+                    <!-- <span class="bg-secondary text-white px-2 py-1">10AM - 12:30PM</span> -->
                   </p>
                   <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">10am - 11am</span> - Keynote Address; Ruby Amegah, VP, Starbucks
                     </p>
@@ -193,7 +193,7 @@
 
            <div class="mt-4">
             <div class="d-flex align-items-center mb-2 gap-3">
-              <span class="text-nowrap fw-bold">2PM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+              <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
             </div>
             <div class="d-flex align-items-start justify-content-start" >
               <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -203,7 +203,7 @@
                 <div class="h-100 mx-2" style="line-height: 1em;">
                   <p class="mt-2">
                     <span class="bg-secondary text-white px-2 py-1">Afternoon</span>
-                    <span class="bg-secondary text-white px-2 py-1">2PM - 4:45PM</span>
+                    <!-- <span class="bg-secondary text-white px-2 py-1">2PM - 4:45PM</span> -->
                   </p>
                   <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: lightseagreen;">2PM - 3PM</span> - Keynote speaker TBD
                   </p>
@@ -222,7 +222,7 @@
 
            <div class="mt-4">
             <div class="d-flex align-items-center mb-2 gap-3">
-              <span class="text-nowrap fw-bold">4:45PM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+              <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
             </div>
             <div class="d-flex align-items-start justify-content-start" >
               <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -232,7 +232,7 @@
                 <div class="h-100 mx-2" style="line-height: 1em;">
                   <p class="mt-2">
                     <span class="bg-secondary text-white px-2 py-1">Evening</span>
-                    <span class="bg-secondary text-white px-2 py-1">4:45PM - 6PM</span>
+                    <!-- <span class="bg-secondary text-white px-2 py-1">4:45PM - 6PM</span> -->
                   </p>
                   <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: tomato;">4:45PM - 6PM</span> - Networking Reception</p>
                   <!-- <p class="text-secondary fw-semibold">Opening Remarks and Introduction to CARISCA</p> -->
@@ -255,7 +255,7 @@
             <h1>Day 2</h1>
             <div>
               <div class="d-flex align-items-center mb-2 gap-3">
-                <span class="text-nowrap fw-bold">9AM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+                <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
               </div>
               <div class="d-flex align-items-start justify-content-start" >
                 <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -265,7 +265,7 @@
                   <div class="h-100 mx-2" style="line-height: 1em;">
                     <p class="mt-2">
                       <span class="bg-secondary text-white px-2 py-1">Morning</span>
-                      <span class="bg-secondary text-white px-2 py-1">9AM - 12:15AM</span>
+                      <!-- <span class="bg-secondary text-white px-2 py-1">9AM - 12:15AM</span> -->
                     </p>
                     <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">9AM - 9:30AM</span> - Recap and Highlights from Day 1</p>
                     <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">9:45AM - 10:45AM</span> - Keynote speaker</p>
@@ -283,7 +283,7 @@
 
              <div class="mt-4">
               <div class="d-flex align-items-center mb-2 gap-3">
-                <span class="text-nowrap fw-bold">11AM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+                <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
               </div>
               <div class="d-flex align-items-start justify-content-start" >
                 <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -293,7 +293,7 @@
                   <div class="h-100 mx-2" style="line-height: 1em;">
                     <p class="mt-2">
                       <span class="bg-secondary text-white px-2 py-1">Late Morning</span>
-                      <span class="bg-secondary text-white px-2 py-1">11AM - 12:15PM</span>
+                      <!-- <span class="bg-secondary text-white px-2 py-1">11AM - 12:15PM</span> -->
                     </p>
                    
                     <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">11AM - 12:15PM</span> - Panel Discussions</p>
@@ -312,7 +312,7 @@
   
              <div class="mt-4">
               <div class="d-flex align-items-center mb-2 gap-3">
-                <span class="text-nowrap fw-bold">1:30PM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+                <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
               </div>
               <div class="d-flex align-items-start justify-content-start" >
                 <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -322,7 +322,7 @@
                   <div class="h-100 mx-2" style="line-height: 1em;">
                     <p class="mt-2">
                       <span class="bg-secondary text-white px-2 py-1">Afternoon</span>
-                      <span class="bg-secondary text-white px-2 py-1">1:30PM - 4PM</span>
+                      <!-- <span class="bg-secondary text-white px-2 py-1">1:30PM - 4PM</span> -->
                     </p>
                     <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: lightseagreen;">1:30PM - 2:30PM</span> - Keynote speaker</p>
                     <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: lightseagreen;">2:45PM - 4PM</span> - Panel Discussions</p>
@@ -340,7 +340,7 @@
   
              <div class="mt-4">
               <div class="d-flex align-items-center mb-2 gap-3">
-                <span class="text-nowrap fw-bold">4PM (GMT)</span><span style="height: 1px; width: 100%; background-color: black;"></span>
+                <span class="text-nowrap fw-bold"></span><span style="height: 1px; width: 100%; background-color: black;"></span>
               </div>
               <div class="d-flex align-items-start justify-content-start" >
                 <div style="height: 8rem; width: 8rem;" class="d-md-block d-none">
@@ -350,7 +350,7 @@
                   <div class="h-100 mx-2" style="line-height: 1em;">
                     <p class="mt-2">
                       <span class="bg-secondary text-white px-2 py-1">Evening</span>
-                      <span class="bg-secondary text-white px-2 py-1">4PM - 5PM</span>
+                      <!-- <span class="bg-secondary text-white px-2 py-1">4PM - 5PM</span> -->
                     </p>
                     <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: tomato;">4PM - 4:30PM</span> - Closing Remarks and Summary of Insights
                     </p>
@@ -409,7 +409,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>CARISCA<span>.</span></h3>
+              <h3>CARISCA<span></span></h3>
               <p>
               KNUST School of Business
 
