--- a/sponsors.html
+++ b/sponsors.html
@@ -59,7 +59,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="./index.html">HOME</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li>
+          <!-- <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <li><a href="./program.html">PROGRAM</a></li>
@@ -103,7 +103,7 @@
 
         <div class="section-title">
           <!-- <h2>Sponsor</h2> -->
-          <h3 class="text-white">Why sponsor or exhibit at CARISCA Business Forum?</h3>
+          <h3 class="text-white">Why sponsor or exhibit at CARISCA's Business Forum?</h3>
           <!-- <p class="text-white fw-light">Gain prominent recognition in event materials, exclusive exhibition space, complimentary registrations, and special mentions, amplifying your organization's visibility and impact at the event.</p> -->
         </div>
 
@@ -132,8 +132,8 @@
             <div class="card border-0 text-white" style="background-color: #090329;">
               <img src="https://carisca.knust.edu.gh/summit2023/images/resources/register.jpg" class="card-img-top" alt="image">
               <div class="card-body mx-0 px-0">
-                <h1 class="card-heading fs-5">Complimentary event registrations for your representatives</h1>
-                <p class="card-text">Your organization will receive complimentary event registrations, granting your representatives access to the event. This not only allows participation in the event's various activities but also facilitates networking opportunities with industry experts and potential partners, fostering valuable connections and collaborations.</p>
+                <h1 class="card-heading fs-5">Diverse Networking</h1>
+                <p class="card-text">The forum will gather supply chain professionals, business leaders, academics, and government representatives, offering an ideal platform to engage with a broad spectrum of relevant stakeholders.</p>
               </div>
             </div>
           </div>
@@ -294,7 +294,7 @@
         <div class="section-title">
           <!-- <h2>Register</h2> -->
           <!-- <h3>Secure Your <span>Spot now</span></h3> -->
-          <h3>Are you an Exhibitor, Partner or Sponsor, fill the form below to <br> <span> Get In Touch</span></h3>
+          <h3>To learn more about sponsorship and exhibition opportunities, please complete the contact form below</span></h3>
           <!-- <p class="fw-light">Send us your details and we’ll show you options that best fit your goals.</p> -->
         </div>
 
@@ -402,7 +402,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>CARISCA<span>.</span></h3>
+              <h3>CARISCA<span></span></h3>
               <p>
               KNUST School of Business
 
