--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="#hero">HOME</a></li>
-          <li><a class="nav-link scrollto" href="#about">ABOUT</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#about">ABOUT</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Speakers</a></li> -->
@@ -177,12 +177,20 @@
           </a> -->
           <div class=" pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <!-- <h1>About the Event</h1> -->
-            <p class="">
-              The Supply Chain Business Forum and Exhibition is a platform that brings together industry professionals, supply chain experts, entrepreneurs, and solution providers. It aims to advance and promote supply chains by facilitating knowledge exchange, showcasing innovative solutions, and fostering collaborations.
-            </p>
-            <p>This event focuses on enhancing supply chain efficiency, sustainability, and competitiveness across Africa, offering insights into the latest industry trends and technologies while providing valuable networking opportunities.</p>
-            <p>Over two days, the Supply Chain Business Forum and Exhibition will combine insightful sessions, interactive discussions, and an exhibition showcasing innovative supply chain solutions. </p>
-            <!-- <ul>
+            Efficient local supply chains are crucial to local, regional and national economic development. The Business Forum and Exhibition will bring together industry experts, business leaders, researchers and other stakeholders to discuss current trends, challenges and opportunities in the supply chain domain, with a focus on enhancing supply chain management practices in Africa.
+<p></p>
+ 
+
+<p>
+Over two days, the Supply Chain Business Forum and Exhibition will combine insightful sessions, interactive discussions, and an exhibition showcasing innovative supply chain solutions. The aim is to enhance supply chain efficiency, sustainability and competitiveness across Africa. 
+
+</p>
+ 
+
+<p>
+Don’t miss this chance to hone your knowledge of the latest industry trends and technologies while taking advantage of valuable networking opportunities. <a href="./register.html">Register now!</a>
+
+</p>            <!-- <ul>
               <li>
                 <i class="bx bx-unite"></i>
                 <div>
@@ -636,9 +644,9 @@
                
               </div>
               <div class="member-info" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">
-                <h4>Ruby Amegah</h4>
-                <span class="">Vice President of Global Food Product R&D, Starbucks</span>
-                <p class="font-italic">"The Odyssey of Coffee and Cocoa Beans- From African soil to Global Cup"</p>
+                <h1 class="fs-3 ">Ruby Amegah</h1>
+                <span class="fs-5 font-italic">Vice President of Global Food Product R&D, Starbucks</span>
+                <p class="font-italic">The Odyssey of Coffee and Cocoa Beans &#8212; From African SOIL to Global Cup</p>
               </div>
             </div>
           </div>
@@ -1020,11 +1028,8 @@ Amegah holds a bachelor’s degree in food science and biochemistry from the Uni
             <p class="fs-4">These activities also focus on developing partnerships and revenue-generating activities to sustain ongoing growth and influence and encourage and promote the inclusion of women in supply chain education, research and practice.</p> -->
             <p class="fs-4">
               The Centre for Applied Research and Innovation in Supply Chain – Africa (CARISCA) is a centre of excellence at Kwame Nkrumah University of Science and Technology. It was created in partnership with Arizona State University and with support from the United States Agency for International Development. CARISCA is a globally recognized, locally owned hub for generating and translating innovative research into positive development outcomes for Ghana and pan-African supply chains.
-
             </p>
-            <p class="fs-4">
-              Efficient local supply chains are crucial to local, regional and national economic development. The Business Forum and Exhibition will bring together industry experts, business leaders, researchers and other stakeholders to discuss current trends, challenges and opportunities in the supply chain domain, with a focus on enhancing supply chain management practices in Africa.
-            </p>
+           
           </div>
     </div>
     <img src="./assets/img/trilogo1.jpg" class="mx-auto d-block footer-img" alt="" style="mix-blend-mode: darken;">
@@ -1034,7 +1039,7 @@ Amegah holds a bachelor’s degree in food science and biochemistry from the Uni
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>CARISCA<span>.</span></h3>
+              <h3>CARISCA<span></span></h3>
               <p>
               KNUST School of Business
 
