--- a/register.html
+++ b/register.html
@@ -62,7 +62,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto" href="./index.html">HOME</a></li>
-          <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li>
+          <!-- <li><a class="nav-link scrollto" href="./index.html#about">ABOUT</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="./index.html#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <li><a href="./program.html">PROGRAM</a></li>
@@ -114,7 +114,7 @@
 
         <div class="section-title text-center w-75 mx-auto">
           <!-- <h2>Register</h2> -->
-          <h3 class="fs-4 ">Registration for the forum is <span>completely free!</span> To reserve your spot, please register below. Attendance costs are covered by <span>CARISCA</span>.</h3>
+          <h3 class="fs-4 ">Please register below to attend the forum. There is no charge for participants who are not exhibiting.</h3>
           <!-- <p class="fw-light">Send us your details and we’ll show you options that best fit your goals.</p> -->
         </div>
 
@@ -304,7 +304,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>CARISCA<span>.</span></h3>
+              <h3>CARISCA<span></span></h3>
               <p>
               KNUST School of Business
 
