--- a/program.html
+++ b/program.html
@@ -147,8 +147,8 @@
                     <span class="bg-secondary text-white px-2 py-1">Morning</span>
                     <!-- <span class="bg-secondary text-white px-2 py-1"></span> -->
                   </p>
-                  <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">8AM - 9AM</span> - Welcome and Registration of the Distinguished speaker Tawfiq </p>
-                  <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">9AM - 9:45AM</span> - Opening Remarks and Introduction to CARISCA; Dale Rogers and Tawfiq</p>
+                  <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">8AM - 9AM</span> - Welcome and Registration </p>
+                  <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: dodgerblue;">9AM - 9:45AM</span> - Opening Remarks and Introduction to CARISCA; Dale Rogers</p>
                   <!-- <a href="#" class="fw-bold d-block text-dark mt-3">KEYNOTE 1</a> -->
                 </div>
                 <!-- <div class="h-100 d-flex flex-column py-4 mx-2">
