--- a/register.html
+++ b/register.html
@@ -189,7 +189,9 @@
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Country<span class="text-danger opacity-75">*</span></label>
-                <input type="text" name="country" id="country" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <select name="country" id="country" class="form-control rounded-0 py-2 px-3 mt-2">
+                  <option value="" class="disable">---Please select---</option>
+                </select>
               </div>
             </div>
             <div class="col-lg-6 mt-4">
