--- a/sponsors.html
+++ b/sponsors.html
@@ -130,7 +130,7 @@
 
           <div class="col-lg-4 col-md-6 d-flex" data-aos="zoom-in" data-aos-delay="100">
             <div class="card border-0 text-white" style="background-color: #090329;">
-              <img src="https://carisca.knust.edu.gh/summit2023/images/resources/register.jpg" class="card-img-top" alt="image">
+              <img src="./assets/img/registration.jpg" class="card-img-top" alt="image">
               <div class="card-body mx-0 px-0">
                 <h1 class="card-heading fs-5">Diverse Networking</h1>
                 <p class="card-text">The forum will gather supply chain professionals, business leaders, academics, and government representatives, offering an ideal platform to engage with a broad spectrum of relevant stakeholders.</p>
@@ -342,8 +342,8 @@
             </div>
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
-                <label for="" class="fw-bold">Mobile Number<span class="text-danger opacity-75">*</span></label>
-                <input type="text" name="mobile_number" id="mobile_number" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <label for="" class="fw-bold">Mobile Number</label>
+                <input type="text" name="mobile_number" id="mobile_number" class="py-2 px-3 mt-2 form-control rounded-0">
               </div>
             </div>
             <div class="col-lg-6 mt-4">
