CHANGE IN PROGRAM

--- a/program.html
+++ b/program.html
@@ -177,7 +177,8 @@
                   </p>
                   <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">10am - 11am</span> - Keynote Address; Ruby Amegah, VP, Starbucks
                     </p>
-                  <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">11:15AM - 12:30PM</span> - Panel Discussion
+                  <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">11:15AM - 12:30PM</span> -  Panel Discussion on Supply Chain Traceability in the Cocoa and Coffee sectors.
+
                   </p>
                   <!-- <a href="#" class="fw-bold d-block text-dark mt-3">KEYNOTE 1</a> -->
                 </div>
@@ -296,7 +297,7 @@
                       <!-- <span class="bg-secondary text-white px-2 py-1">11AM - 12:15PM</span> -->
                     </p>
                    
-                    <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">11AM - 12:15PM</span> - Panel Discussions</p>
+                    <p class="text-secondary fw-semibold"><span style="font-size: 14px; color: darkorchid;">11AM - 12:15PM</span> - Panel Discussion on Supply Chain Traceability in the health sector</p>
                     <!-- <a href="#" class="fw-bold d-block text-dark mt-3">KEYNOTE 1</a> -->
                   </div>
                   <!-- <div class="h-100 d-flex flex-column py-4 mx-2">
