--- a/sponsors.html
+++ b/sponsors.html
@@ -349,7 +349,9 @@
             <div class="col-lg-6 mt-4">
               <div class="d-flex flex-column">
                 <label for="" class="fw-bold">Country/Region<span class="text-danger opacity-75">*</span></label>
-                <input type="text" name="country" id="country" class="py-2 px-3 mt-2 form-control rounded-0" required>
+                <select name="country" id="country" class="form-control rounded-0 py-2 px-3 mt-2">
+                  <option value="" class="disable">---Please select---</option>
+                </select>
               </div>
             </div>
             <div class="col mt-4">
@@ -473,7 +475,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/forms.js"></script>
+  <script type="module" src="assets/js/forms.mjs"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
