--- a/register.html
+++ b/register.html
@@ -377,7 +377,7 @@
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/register.js"></script>
+  <script type="module" src="assets/js/register.mjs"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
