--- a/register.html
+++ b/register.html
@@ -378,6 +378,7 @@
 
   <!-- Template Main JS File -->
   <script type="module" src="assets/js/register.mjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
