--- a/sponsors.html
+++ b/sponsors.html
@@ -476,6 +476,7 @@
 
   <!-- Template Main JS File -->
   <script type="module" src="assets/js/forms.mjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="assets/js/main.js"></script>
 
 </body>
