PULLING FROM MAIN

--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <div class="member-img">
-                <img src="https://firebasestorage.googleapis.com/v0/b/cariscabusinessforum.appspot.com/o/team-1.jpg?alt=media&token=73ce4297-a99a-419f-9a0e-efdc8821aa62" class="img-fluid" alt="">
+                <img src="./assets/img/team/team-1.jpg" class="img-fluid" alt="">
                
               </div>
               <div class="member-info" data-bs-toggle="modal" data-bs-target="#exampleModal" style="cursor: pointer;">
