--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>CARISCA Business Forum - Navigating the Future of Supply Chains in Africa</title>
+  <title>REGISTER</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -61,20 +61,21 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto" href="./index.html">HOME</a></li>
+          <li><a class="nav-link scrollto" href="#hero">HOME</a></li>
           <!-- <li><a class="nav-link scrollto" href="#about">ABOUT</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
           <!-- <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a href="./program.html">PROGRAM</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Speakers</a></li> -->
-          <li class="dropdown"><a href="#"><span>FORUM</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>PROGRAM</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="./program.html">PROGRAM</a></li>
+              <li><a href="./program.html">AGENDA</a></li>
               <li><a href="./speakers.html">SPEAKERS</a></li>
-              <li><a href="./sponsors-partners.html">SPONSORS</a></li>
-             
+              <li><a href="./sponsors-partners.html">SPONSORS/EXHIBITORS</a></li>
+              
             </ul>
           </li>
+          <li><a class="nav-link scrollto" href="./lodging.html">LODGING</a></li>
           <li><a class="nav-link scrollto btn btn-primary text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3" href="./sponsors.html" style="background-color: rgb(15, 59, 143);">EXHIBIT</a></li>
           <li><a class="btn btn-danger text-white px-lg-4 px-2 py-2 mx-lg-0 mx-3 mt-md-0 mt-3" href="./register.html">REGISTER TO ATTEND</a></li>
         </ul>
