--- a/sponsors-partners.html
+++ b/sponsors-partners.html
@@ -294,17 +294,19 @@
               </div>
             </div>
     
+            <h1 class="bg-warning text-white px-3 d-inline-block">Gold</h1>
              <div class="row portfolio-container justify-content-center align-items-center" data-aos="fade-up" data-aos-delay="200">
-
-              <div class="col-lg-3 col-md-6 portfolio-item filter-app">
+              <a href="http://www.conshipgh.com/" target="_blank" class="col-lg-3 col-md-6 portfolio-item filter-app">
                 <!-- <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""> -->
                <img src="https://firebasestorage.googleapis.com/v0/b/cariscabusinessforum.appspot.com/o/Conship%20logo.jpeg.jpg?alt=media&token=9d68d4a0-f277-4e4e-8cc0-eccdcbcdb990" class="img-fluid" alt="" style="aspect-ratio: 3/2;">
-              </div>
+              </a>  
+            </div>
+            <h1 class="bg-secondary text-white px-3 d-inline-block">Gold</h1>
+             <div class="row portfolio-container align-items-center" data-aos="fade-up" data-aos-delay="200">
               <div class="col-lg-3 col-md-6 portfolio-item filter-app">
                 <!-- <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt=""> -->
                <img src="https://firebasestorage.googleapis.com/v0/b/cariscabusinessforum.appspot.com/o/The%20Interplast%20logo.pdf.png?alt=media&token=ee85df65-04c5-4043-96ab-5bdcf53c8c01" class="img-fluid" alt="" style="aspect-ratio: 3/2;">
               </div>
-    
             </div>
           </div>
         </section> 
